istio/compliancescanner1_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: compliancescannerv1-gateway
spec:
  selector:
    istio: aks-istio-ingressgateway-external # use istio ingress controller name here
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: compliancescannerv1-internalgateway
spec:
  selector:
    istio: aks-istio-ingressgateway-external # use istio ingress controller name here
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: compliancescannerv1
spec:
  hosts:
  - "*"
  gateways:
  - compliancescannerv1-gateway
  http:
  - match:
    - uri:
        exact: /compliancescannerv1
    route:
    - destination:
        host: compliancescannerv1
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: compliancescannerinternalv1
spec:
  hosts:
  - "*"
  gateways:
  - compliancescannerv1-internalgateway
  http:
  - match:
    - uri:
        exact: /compliancescannerv1
    route:
    - destination:
        host: compliancescannerv1
        port:
          number: 5000
