istio/compliancescanner1.yaml
apiVersion: v1
kind: Service
metadata:
  name: compliancescannerv1
  labels:
    run: compliancescannerv1
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    run: compliancescannerv1
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compliancescannerv1
spec:
  selector:
    matchLabels:
      run: compliancescannerv1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: compliancescannerv1
    spec:
      containers:
        - env:
            - name: compliancescannerv1URL_URL
              value: compliancescannerv1:5001
            - name: VOLUMENAME
              value: /common-workspacev1
          image: devdockertesting/compliancescanner:v1
          name: compliancescannerv1
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: 200Mi
              cpu: 300m
            requests:
              memory: 100Mi
              cpu: 100m
          volumeMounts:
            - mountPath: /common_workspacev1
              name: common-workspacev1
      restartPolicy: Always
      volumes:
        - name: common-workspacev1
          persistentVolumeClaim:
            claimName: common-workspacev1
status: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-compliancescannernetwork
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: compliancescanner
  podSelector:
    matchLabels:
      run: compliancescanner
